--- a/css/styles.css
+++ b/css/styles.css
@@ -3,9 +3,17 @@ html, body{
 }
 
 .gather-stuff{
+  margin-top: 20%;
+  margin-bottom: 20%;
   text-align: center;
 }
 
-.gather-small{
-  display: inline;
+.label, .input{
+  float: left;
+  clear: both;
+}
+
+.submit{
+  float: left;
+  clear: both;
 }
