--- a/css/styles.css
+++ b/css/styles.css
@@ -6,20 +6,28 @@ body{
   font-family: 'Coiny', 'cursive';
 }
 
+.nav{
+  background-color: #51eaea;
+  border-bottom: solid 0.5px;
+}
+
 .heading{
   text-align:center;
 }
 
 .main{
+  background-color: #8ed6ff;
   text-align: center;
   float: left;
   clear: both;
+  margin: 0 auto;
+  width: 100%;
 }
 
 .instructions{
-  border-bottom: solid 1px;
   margin: 0;
   padding-right: 10px;
+  padding-left: 10px;
 }
 
 .gather-stuff{
