Add README.MD file

--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,7 @@ body{
 }
 
 .main{
-  background-color: #8ed6ff;
+  background-color: #ff9d76;
   text-align: center;
   float: left;
   clear: both;
