--- a/css/styles.css
+++ b/css/styles.css
@@ -27,10 +27,7 @@ body{
 
 .instructions{
   margin: 0;
-  padding-right: 10px;
-  padding-left: 10px;
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding: 20px 10px;
 }
 
 .gather-stuff{
